--- a/index.html
+++ b/index.html
@@ -1,12 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="preload" href="dd568dbcd078c0adf7cf.wasm" as="fetch" crossorigin/>
+    <link rel="preload" href="68cc4883054f9abe1b6f.wasm" as="fetch" crossorigin/>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>nineMensMorrisAppKMP</title>
+    <title>Nine men's morris game | web</title>
     <link type="text/css" rel="stylesheet" href="styles.css">
+    <div id = "app-loading-animation" class="loader"></div>
     <script type="application/javascript" src="composeApp.js"></script>
 </head>
 <body>
 </body>
 </html>
+<script>
+    function onLoadFinished() {
+        document.getElementById("app-loading-animation").style.display = "none";
+    };
+</script>
